--- a/figma3/index.html
+++ b/figma3/index.html
@@ -26,11 +26,15 @@
                 <input type="radio" class="RadioContainer_customRadio" name="group1">
             </div>
         </section>
+
         <section class="secondSection secondSection--margin">
             <div class="secondSection_rowContainer">
+
                 <article class="secondSection__bigContainer">
                     <div class="bigContainer__hContainer">
-                        <h2 class="hContainer__H">Подключиться</h2>
+                        <h2 class="hContainer__H">
+                            Подключиться
+                        </h2>
                         <div class="hContainer__buttonContainer buttonContainer--first">
                         <button class="buttonContainer__button">
                             Популярное
@@ -51,6 +55,7 @@
                     </div>
                     <img src="image/article1.png" class="bigContainer__Image--first">
                 </article>
+
                 <article class="secondSection_mediumContainer">
                     <h2 class="mediumContainer__H">Перейти со своим номером (MNP)</h2>
                     <p class="mediumContainer__p"> <img src="image/korzina.svg" class="p__icon">Стоимость — 0 ₽</p>
@@ -64,8 +69,11 @@
                     </div>
                     <img src="image/article2.png" class="mediumContainer_image mediumContainer_image--small">
                 </article>
+
             </div>
+
             <div class="secondSection_rowContainer">
+
                 <article class="secondSection__littleContainer">
                     <h2 class="littleContainer__H">Домашний интернет</h2>
                     <p class="littleContainer__p"><img src="image/Wifi.svg" class="p__icon">от 300 Мбит / сек</p>
@@ -78,18 +86,23 @@
                         </button>
                     </div>
                 </article>
+
                 <article class="secondSection__littleContainer">
                     <h2 class="littleContainer__H">Пополнить счёт</h2>
                     <p class="littleContainer__p"><img src="image/Plus.svg" class="p__icon">Без комиссии</p>
                     <button class="littleContainer__button"> Пополнить</button>
                 </article>
+
                 <article class="secondSection__littleContainer">
                     <h2 class="littleContainer__H">Красивые номера</h2>
                     <p class="littleContainer__p"><img src="image/Star.svg" class="p__icon">Серебряные, золотые и платиновые номера</p>
                     <button class="littleContainer__button"> Подобрать номер</button>
                 </article>
+
             </div>
+
             <div class="secondSection_rowContainer">
+
                 <article class="secondSection_mediumContainer">
                     <h2 class="mediumContainer__H">Дёшево звонить по России</h2>
                     <p class="mediumContainer__p"><img src="image/phone.svg" class="p__icon">от 80 ₽ / мес</p>
@@ -103,6 +116,7 @@
                     </div>
                     <img src="image/article6.png" class="mediumContainer_image">
                 </article>
+
                 <article class="secondSection__bigContainer">
                     <div class="bigContainer__hContainer">
                         <h2 class="hContainer__H"> Мобильное приложение</h2>
@@ -126,22 +140,34 @@
                     </div>
                     <img src="image/article7.png" class="bigContainer__Image--last">
                 </article>
+
             </div>
+
         </section>
+
         <section class="thirdSection"> 
-            <h2 class="thirdSection_H">Карта покрытия</h2>
+            <h3 class="thirdSection_H">
+                Карта покрытия
+            </h3>
             <div class="thirdSection_bublesContainer">
-                <div class="bublesContainer_3G">3G</div>
-                <div class="bublesContainer_4G">4G</div>
+                <p class="bublesContainer_3G">
+                    3G
+                </p>
+                <p class="bublesContainer_4G">
+                    4G
+                </p>
             </div>
             <img class="thirdSection__map1" src="image/map1.svg">
             <img class="thirdSection__map2" src="image/map2.svg">
             <img class="thirdSection__map3" src="image/map3.svg">
         </section>
+
     </main>
+
     <footer class="footer">
+
         <div class="footer__Logotable">
-            <p class="Logotable__text footer__blueText">Твой мир с новыми возможностями!</p>
+            <h6 class="Logotable__text footer__blueText">Твой мир с новыми возможностями!</h6>
             <div class="Logotable__LogoContainer">
                 <img src="image/b.svg" class="Logo_latter">
                 <img src="image/o.svg" class="Logo_latter">
@@ -152,28 +178,29 @@
                 <img src="image/Vector.svg" class="Logo_vector2">
             </div>
         </div>
-        <ul class="footer__smalltable">
-            <li class="smalltable__text smalltable__text--first">Тарифы и опции</li>
-            <li class="smalltable__text">Услуги</li>
-            <li class="smalltable__text">Оплаты</li>
-            <li class="smalltable__text">Личный кабинет</li>
-        </ul>
-        <ul class="footer__smalltable">
-            <li class="smalltable__text smalltable__text--first">Покрытие</li>
-            <li class="smalltable__text">О компании</li>
-            <li class="smalltable__text">Новости</li>
-            <li class="smalltable__text">Поддержка</li>
-        </ul>
+        <nav class="footer__smalltable">
+            <a class="smalltable__text smalltable__text--first">Тарифы и опции</a>
+            <a class="smalltable__text">Услуги</a>
+            <a class="smalltable__text">Оплаты</a>
+            <a class="smalltable__text">Личный кабинет</a>
+        </nav>
+        <nav class="footer__smalltable">
+            <a class="smalltable__text smalltable__text--first">Покрытие</a>
+            <a class="smalltable__text">О компании</a>
+            <a class="smalltable__text">Новости</a>
+            <a class="smalltable__text">Поддержка</a>
+        </nav>
         <ul class="footer__phonestable">
             <li class="phonestable__text phonestable__text--first">Проверка баланса - <span class="footer__blueText">*100#</span></li>
             <li class="phonestable__text">Узнать свой номер телейфона - <span class="footer__blueText">*200#</span></li>
             <li class="phonestable__text">Остатки пакетов улуг - <span class="footer__blueText"> *101#</span></li>
             </ul>
-        <ul class="footer_copyright">
-            <li class="copyright__text copyright__text--first">Служба поддержки</li>
-            <li class="copyright__phone footer__blueText">8 900 123 45 67</li>
-            <li class="copyright__text--last">© 2022 ООО «КТК ТЕЛЕКОМ»</li>
-        </ul>
+        <div class="footer_copyright">
+            <a class="copyright__text copyright__text--first">Служба поддержки</a>
+            <address class="copyright__phone footer__blueText">8 900 123 45 67</address>
+            <p class="copyright__text--last">© 2022 ООО «КТК ТЕЛЕКОМ»</p>
+        </div>
+        
     </footer>
 </body>
 </html>
