--- a/figma1/index.html
+++ b/figma1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Figma</title>
+    <title>Верстка макета с Figma #1</title>
 </head>
 <body>
     <div class="container">
@@ -29,7 +29,7 @@
                 </button>
             </section>
             <section class="cardsСontainer card_left">
-                <div class="cardsContainer_card">
+                <article class="cardsContainer_card">
                     <h2 class="card_first"><span class="card_first_text">Ваш профиль</span></h2>
                     <h3 class="card_H">Сергей Александрович Фролов</h3>
                     <p class="card_info">
@@ -43,8 +43,8 @@
                     <button class="card_button">
                         Редактировать
                     </button>
-                </div>
-                <div class="cardsContainer_card_two">
+                </article>
+                <article class="cardsContainer_card_two">
                     <h2 class="card_first"><span class="card_first_text">Статистика</span></h2>
                     <p class="card_info">
                         <span >
@@ -60,65 +60,81 @@
                         <span class="card_text_bold">Языки работ:</span>русский, английский
                         </span>
                     </p>
-                </div>
+                </article>
             </section>
             <section>
-                <div class="grid">
-                        <div class="grid_item"><span class="grid_item_text">Название работы</span></div>
-                        <div class="grid_item"><span class="grid_item_text">Дата загрузки</span></div>
-                        <div class="grid_item"><span class="grid_item_text">Научный руководитель</span></div>
-                        <div class="grid_item"><span class="grid_item_text">Уникальность</span></div>
- 
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Привлечение инвестиций как фактор развития экономики</span></div>
-                        <div class="grid_item"><span class="grid_item_text">21.05.2019</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">89%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">The role of accounting in sustainable development</span></div>
-                        <div class="grid_item"><span class="grid_item_text">11.02.2019</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Шаляпина В.С.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">78%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Сценарный анализ как инструмент учета рисков инвестиционного проекта</span></div>
-                        <div class="grid_item"><span class="grid_item_text">05.09.2018</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">67%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Глобальные и региональные инвестиционные тенденции</span></div>
-                        <div class="grid_item"><span class="grid_item_text">09.07.2018</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">73%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Systemic risks in financial markets</span></div>
-                        <div class="grid_item"><span class="grid_item_text">18.05.2018</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Леонидов В.Б.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">77%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">The influence of tax regulation liberalisation on the domestic debt market</span></div>
-                        <div class="grid_item"><span class="grid_item_text">09.03.2018</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Шаляпина В.С.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">82%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Биткоин как новый вид инвестиций</span></div>
-                        <div class="grid_item"><span class="grid_item_text">29.01.2018</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">71%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Проблема воспроизводства жилищного фонда в России</span></div>
-                        <div class="grid_item"><span class="grid_item_text">08.11.2017</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">65%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Влияние безработицы на экономику СНГ</span></div>
-                        <div class="grid_item"><span class="grid_item_text">17.09.2017</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">68%</span></div>
-
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Мировой валютный рынок Форекс</span></div>
-                        <div class="grid_item"><span class="grid_item_text">02.07.2017</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></div>
-                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">67%</span></div>
-                </div>
+                <table class="grid">
+                    <thead>
+                        <tr>
+                            <th><span class="grid_item_text">Название работы</span></th>
+                            <th><span class="grid_item_text">Дата загрузки</span></th>
+                            <th><span class="grid_item_text">Научный руководитель</span></th>
+                            <th><span class="grid_item_text">Уникальность</span></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">Привлечение инвестиций как фактор развития экономики</span></td>
+                            <td><span class="grid_item_text">21.05.2019</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">89%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">The role of accounting in sustainable development</span></td>
+                            <td><span class="grid_item_text">11.02.2019</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Шаляпина В.С.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">78%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">Сценарный анализ как инструмент учета рисков инвестиционного проекта</span></td>
+                            <td><span class="grid_item_text">05.09.2018</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">67%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">Глобальные и региональные инвестиционные тенденции</span></td>
+                            <td><span class="grid_item_text">09.07.2018</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">73%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">Systemic risks in financial markets</span></td>
+                            <td><span class="grid_item_text">18.05.2018</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Леонидов В.Б.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">77%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">The influence of tax regulation liberalisation on the domestic debt market</span></td>
+                            <td><span class="grid_item_text">09.03.2018</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Шаляпина В.С.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">82%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">Биткоин как новый вид инвестиций</span></td>
+                            <td><span class="grid_item_text">29.01.2018</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">71%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">Проблема воспроизводства жилищного фонда в России</span></td>
+                            <td><span class="grid_item_text">08.11.2017</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">65%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">Влияние безработицы на экономику СНГ</span></td>
+                            <td><span class="grid_item_text">17.09.2017</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">68%</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="grid_item_text grid_item_text_blue">Мировой валютный рынок Форекс</span></td>
+                            <td><span class="grid_item_text">02.07.2017</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></td>
+                            <td><span class="grid_item_text grid_item_text_blue">67%</span></td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
         </main>
         <footer class="footer">
